--- a/todonext/components/login/auth-form.module.css
+++ b/todonext/components/login/auth-form.module.css
@@ -3,7 +3,9 @@
   width: 95%;
   max-width: 25rem;
   border-radius: 6px;
-  background-color: rgb(131, 214, 135);
+  /* background-color: rgb(152, 236, 157); */
+  background-color: #a9e2c6;
+
   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
   padding: 1rem;
   text-align: center;
