--- a/todonext/components/users/user.module.css
+++ b/todonext/components/users/user.module.css
@@ -1,29 +1,6 @@
-.grid {
-  list-style: none;
-  text-align: center;
-  display: grid;
-}
-.grid h2 {
-  color: #0b6238;
-}
-
-.grid button {
-  background-color: #a9e2c6;
-  border: white;
-  border-radius: 4px;
-  width: 8%;
-  height: 8%;
-}
-.grid button:hover {
-  background-color: #7fdeb0;
-}
-
-.ulul div {
+.form {
   width: 70rem;
   margin: 2rem auto;
-}
-
-.box {
   text-align: center;
 }
 
@@ -33,6 +10,7 @@
   border: 4px solid #a9e2c6;
   border-radius: 3px;
 }
+
 .table thead {
   background-color: #a9e2c6;
   color: #0b6238;
