--- a/client/src/components/ImageBoard/Image.module.css
+++ b/client/src/components/ImageBoard/Image.module.css
@@ -5,22 +5,31 @@
 .imgtable {
   border-collapse: separate;
   object-fit: cover;
+  width: 50rem;
+  margin: 2rem auto;
+  border: 2px solid black;
+  border-radius: 3px;
+  padding: 10px;
 }
-.imagehead {
+
+.imagehead th {
+  background-color: rgb(199, 201, 216);
+  width: 100px;
+  border-radius: 2px;
+  padding: 4px;
 }
 
 .img {
   margin-top: 20px;
 }
-
-.td {
-  width: 150rem;
-  object-fit: cover;
+.body tr {
+  border-width: 10px;
 }
 
 .body img {
   padding: 10px;
-  width: 35%;
+  width: 90%;
   height: 35%;
   border-radius: "5px";
+  align-items: center;
 }
