--- a/client/src/components/views/YjBoard/YjBoard.css
+++ b/client/src/components/views/YjBoard/YjBoard.css
@@ -6,6 +6,9 @@
   width: 100px;
 }
 
+.list_styles {
+}
+
 .list_styles button:hover {
   background-color: rgb(144, 236, 227);
 }
@@ -15,12 +18,16 @@
 }
 
 .list_table {
-  text-align: center;
+  border: 2px solid rgb(126, 129, 128);
+  width: 50rem;
   margin: 1rem auto;
-  padding: 2rem;
   border-radius: 4px;
-  border-color: rgb(144, 236, 227);
-  border-width: 2px;
+
+  /* padding: 2rem; */
+}
+.list_table table {
+  margin: 2rem auto;
+  padding: 2rem;
 }
 
 .list_table button {
@@ -29,6 +36,7 @@
   background-color: rgb(220, 244, 236);
   border-radius: 4px;
   padding: 0.5rem;
+  margin-top: 10px;
 }
 
 .list_table button:hover {
@@ -37,9 +45,15 @@
 }
 
 .list_table td {
-  padding: 10px;
+  padding: 15px;
+}
+.list_styles button {
+  margin: 15px;
 }
 
+.search-styles {
+  padding: 5px;
+}
 .search-styles input {
   text-align: center;
   margin: 10px 10px;
